# daisies

./: .gitignore  CMakeLists.txt  background.cpp  background.h  daisies.rc  flowers.cpp  flowers.h  installer.iss  main.cpp  meta.cpp  resource.h  screensaver.cpp  screensaver.h
game/: main.json  tiny.json
game/archetype/: BigCloud.json  Bloom.json  ComplexBloom.json  Ground.json  MedCloud.json
